fix: 修复编译错误并完善依赖配置
## 🐛 修复问题

### 编译错误修复
- 添加Lombok依赖到core、ai、web模块
- 修复ModuleType枚举，添加THEORY、PRACTICE、PROJECT、TUTORIAL、QUIZ值
- 解决Java 8兼容性问题，替换Map.of()为HashMap初始化
- 添加Thymeleaf模板引擎依赖到web模块

### 依赖管理优化
- 统一导入java.util.*简化import语句
- 使用Collections.unmodifiableMap()保证不可变性
- 修复MySQL驱动依赖警告问题

### 模块间依赖
- 修复parent POM依赖问题，确保正确的模块构建顺序
- 验证所有模块能够正确编译和打包

## ✅ 验证结果
- ✅ 编译成功：mvn compile
- ✅ 打包成功：mvn package
- ✅ 依赖解析正常
- ✅ 所有模块构建完成

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>